fix: navbar alignment

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -19,15 +19,23 @@ body {
 }
 
 /* User Base */
-.nav-bar {
+.nav-container {
     position: fixed;
     background-color: #fff;
     height: 100vh;
     width: 20%;
 }
 
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .nav-bar .logo {
     padding: 2rem;
+    display: flex;
+    flex-direction: row;
 }
 
 .nav-bar .logo img {
@@ -68,7 +76,11 @@ body {
 
 .links a svg {
     margin-right: 1rem;
-    margin-left: 25%;
+    vertical-align: middle;
+}
+
+.links a span {
+    vertical-align: middle;
 }
 
 /* Admin Base */
